# esp32_automation

./: .cproject  .gitignore  .project  CMakeLists.txt  Jenkinsfile  README.md  file.txt  sample.txt  sdkconfig  sdkconfig.old  temp1.txt.txt  temp2.txt.txt  temp3.txt.txt  version.txt
TestIDF/: .cproject  .project  sdkconfig
TestIDF/main/: main.c
climate_controller/: .cproject  .project  sdkconfig.old
climate_controller/main/: CMakeLists.txt
components/bme280/: bme280.c  bme280.h
components/bme680/: bme680.c  bme680.h
components/boot/: CMakeLists.txt  access_point_mode.c  access_point_mode.h  app_connect.c  app_connect.h  boot.c  boot.h  component.mk  deep_sleep_manager.c  deep_sleep_manager.h  hard_reset_manager.c  hard_reset_manager.h  led_manager.c  led_manager.h  ports.c  ports.h  task_priorities.h  test_hardware.c  test_hardware.h
components/co2_sensors/: CMakeLists.txt
components/ds3231/: ds3231.c  ds3231.h
components/network_manager/: CMakeLists.txt  network_settings.c  network_settings.h
components/network_manager/access_point/: access_point.c  access_point.h
components/network_manager/cloud_logger/: udp_logging.c  udp_logging.h
components/network_manager/mqtt/: mqtt_manager.c  mqtt_manager.h
components/network_manager/ota/: ota.c  ota.h
components/network_manager/wifi/: wifi_connect.c  wifi_connect.h
components/sensors/: CMakeLists.txt
components/sensors/control/: JSON_keys.h  co2_control.c  co2_control.h  control_settings_keys.h  control_task.c  control_task.h  ec_control.c  ec_control.h  humidity_control.c  humidity_control.h  ph_control.c  ph_control.h  reservoir_control.c  reservoir_control.h  sensor_control.c  sensor_control.h  temperature_control.c  temperature_control.h
components/sensors/libs/: bme680.c  co2_sensor.c  co2_sensor.h  ec_sensor.c  ec_sensor.h  i2cdev.c  mcp23x17.c  ph_sensor.c  ph_sensor.h  rf_lib.c  scd30.c  scd30.h  scd40.c  scd40.h  ultrasonic.h
components/sensors/reading/: bme_reading.c  bme_reading.h  co2_reading.c  co2_reading.h  co2_sensor_struct.c  co2_sensor_struct.h  ec_reading.c  ec_reading.h  ph_reading.c  ph_reading.h  scd30_reading.c  scd30_reading.h  scd40_reading.c  scd40_reading.h  sensor.c  sensor.h  sync_sensors.c  sync_sensors.h  ultrasonic_reading.c  ultrasonic_reading.h  water_temp_reading.c  water_temp_reading.h
esp32_automation/: .cproject  sdkconfig
fertigation_controller/: .project
main/: CMakeLists.txt  main.c
(+154 files in other folders)
